# ids

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  DOLT_REMOTE.md  PRD.md  README.md  TECH_STACK.md  TESTS.md  TEST_STRATEGY.md  manifest  pyproject.toml
.beads/: config.yaml
.github/workflows/: ci.yml
.semgrep/: advisory.yml  blocker.yml
.semgrep/tests/: advisory.yml  blocker.yml
specs/: IDS01-weekly-portfolio-snapshot.context.md  IDS01-weekly-portfolio-snapshot.md  IDS02-strategy-compliance-alerts-weekly.context.md  IDS02-strategy-compliance-alerts-weekly.md  IDS03-position-log-stubs.context.md  IDS03-position-log-stubs.md  IDS04-missing-rationale-alerts-weekly.context.md  IDS04-missing-rationale-alerts-weekly.md  IDS05-instrument-metadata-management.context.md  IDS05-instrument-metadata-management.md  IDS06-concentration-and-size-alerts-weekly.context.md  IDS06-concentration-and-size-alerts-weekly.md  IDS07-pre-purchase-compliance-check.context.md  IDS07-pre-purchase-compliance-check.md  IDS08-monthly-performance-vs-benchmarks.context.md  IDS08-monthly-performance-vs-benchmarks.md  IDS09-monthly-closed-trade-statistics.context.md  IDS09-monthly-closed-trade-statistics.md  IDS10-monthly-chart-visualizations.context.md  IDS10-monthly-chart-visualizations.md  IDS11-monthly-reflection-prompts.context.md  IDS11-monthly-reflection-prompts.md  IDS12-real-vs-discipline-twin.context.md  IDS12-real-vs-discipline-twin.md
src/ids/: __init__.py  bootstrap.py  py.typed
src/ids/adapters/: formatters.py  jsonl_snapshot_store.py  markdown_report_writer.py  xtb_filename.py  xtb_portfolio_loader.py
src/ids/application/: __init__.py  viewmodels.py  weekly_snapshot.py
src/ids/application/ports/: __init__.py  portfolio.py  position_log_store.py  report_writer.py  snapshot_store.py
src/ids/application/use_cases/: __init__.py  generate_weekly_report.py  sync_position_logs.py
src/ids/cli/: __init__.py  report.py
src/ids/domain/: __init__.py  compliance_alerts.py  enums.py  errors.py  models.py  position_log_context.py  strategy_rules.py  timezones.py  value_objects.py
src/ids/domain/ports/: __init__.py  report_writer.py
src/ids/domain/services/: __init__.py  weekly_snapshot.py
src/ids/infrastructure/: __init__.py
src/ids/infrastructure/adapters/: __init__.py  formatters.py  jsonl_snapshot_store.py  markdown_position_log_store.py  markdown_report_writer.py  xtb_portfolio_loader.py
src/ids/infrastructure/adapters/templates/: weekly_report.md.j2
src/ids/presentation/: __init__.py
src/ids/presentation/cli/: __init__.py  constants.py  position_log.py  report.py
tests/: __init__.py  conftest.py
tests/acceptance/: test_real_export_position_log.py
tests/adapters/: test_formatters.py  test_jsonl_snapshot_store.py  test_markdown_report_writer.py  test_xtb_filename.py  test_xtb_portfolio_loader.py
tests/application/: test_ports.py  test_viewmodels.py  test_weekly_snapshot.py
tests/application/use_cases/: test_generate_weekly_report.py  test_sync_position_logs.py
tests/cli/: test_decimal_context.py
tests/domain/: conftest.py  test_compliance_alerts.py  test_models.py  test_ports.py  test_position_log_context.py  test_value_objects.py  test_weekly_snapshot.py
tests/e2e/: test_position_log_sync.py  test_report_weekly.py
tests/fixtures/: account_ikze_99999999_pl_xlsx_2024-12-31_2026-05-02.xlsx  account_ikze_99999999_pl_xlsx_2024-12-31_2026-05-09.xlsx  generate_alerts_xlsx.py  generate_golden_xlsx.py
tests/fixtures/expected/: weekly_2026-05-02.md  weekly_2026-05-09.md
tests/infrastructure/adapters/: conftest.py  test_formatters.py  test_jsonl_snapshot_store.py  test_markdown_position_log_store.py  test_markdown_report_writer.py  test_xtb_filename.py  test_xtb_portfolio_loader.py
tests/presentation/cli/: __init__.py  test_decimal_context.py
