[project]
name = "ids"
version = "0.1.0"
description = "Investment Decision System - IKZE automation"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.12",
    "rich>=13.7",
    "pandas>=2.2",
    "openpyxl>=3.1",
    "matplotlib>=3.8",
    "pyyaml>=6.0",
    "python-frontmatter>=1.1",
    "jinja2>=3.1",
]

[project.scripts]
ids = "ids.cli:app"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-xdist>=3.5",
    "ruff>=0.6",
    "pyright>=1.1.380",
    "pre-commit>=3.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF", "PL"]

[tool.pyright]
include = ["src", "tests"]
strict = ["src"]
pythonVersion = "3.12"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = [
    "unit: pure domain or import-level tests with no filesystem or external I/O",
    "integration: adapter tests that exercise real filesystem or generated fixture files",
    "e2e: full CLI invocation tests with golden-file assertions",
]
