[project]
name = "ids"
version = "0.1.0"
description = "Investment Decision System - IKZE automation"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.12",
    "rich>=13.7",
    "pandas>=2.2",
    "openpyxl>=3.1",
    "matplotlib>=3.8",
    "pyyaml>=6.0",
    "python-frontmatter>=1.1",
    "jinja2>=3.1",
]

[project.scripts]
ids = "ids.cli:app"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-xdist>=3.5",
    "ruff>=0.6",
    "pyright>=1.1.380",
    "pre-commit>=3.7",
    "import-linter>=2.11",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF", "PL"]

[tool.pyright]
include = ["src", "tests"]
strict = ["src"]
pythonVersion = "3.12"

[tool.importlinter]
root_packages = ["ids"]
include_external_packages = true

[[tool.importlinter.contracts]]
name = "Domain must not import outer layers"
type = "forbidden"
source_modules = ["ids.domain"]
forbidden_modules = ["ids.application", "ids.infrastructure", "ids.cli"]

[[tool.importlinter.contracts]]
name = "Domain must not import I/O libraries"
type = "forbidden"
source_modules = ["ids.domain"]
forbidden_modules = [
    # stdlib I/O
    "pathlib",
    "os",
    "io",
    "json",
    "csv",
    "shutil",
    "subprocess",
    "sqlite3",
    # third-party I/O (adapter dependencies)
    "pandas",
    "openpyxl",
    "yaml",
    "frontmatter",
    "jinja2",
    "matplotlib",
    "typer",
    "rich",
]

[[tool.importlinter.contracts]]
name = "Application must not import infrastructure or CLI"
type = "forbidden"
source_modules = ["ids.application"]
forbidden_modules = ["ids.infrastructure", "ids.cli"]

[[tool.importlinter.contracts]]
name = "Infrastructure must not import CLI"
type = "forbidden"
source_modules = ["ids.infrastructure"]
forbidden_modules = ["ids.cli"]

[[tool.importlinter.contracts]]
name = "Hexagonal layers flow top-down: CLI -> infrastructure -> application -> domain"
type = "layers"
layers = ["ids.cli", "ids.infrastructure", "ids.application", "ids.domain"]
exhaustive = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = [
    "unit: pure domain or import-level tests with no filesystem or external I/O",
    "integration: adapter tests that exercise real filesystem or generated fixture files",
    "e2e: full CLI invocation tests with golden-file assertions",
]
